--- a/configs/example_config.json
+++ b/configs/example_config.json
@@ -1,24 +1,35 @@
 {
   "input_path": "/home/pymole/PycharmProjects/ppz-server/ppz_server/examples/2",
+  "model_input": "model2.h5",
+  "model_output": "model3.h5",
+
   "pool_size": 500,
   "num_chunks": 100,
   "allow_less": true,
   "train_ratio": 0.9,
-  "model_input": "model2.h5",
-  "model_output": "model3.h5",
   "batch_size": 2048,
   "lr": 0.01,
   "momentum": 0.9,
 
-  "upload": {
-    "url": "http://127.0.0.1:8000/upload_network",
-    "params": {
-      "blocks": 20,
-      "filters": 2,
-      "field_width": 5,
-      "field_height": 5,
-      "training_run_id": 1,
-      "prev_delta_sha": "asasf2efsdfhdkdt6uxfzgjcm"
+  "server": {
+    "training_run_id": 1,
+    "sha": "asasf2efsdfhdkdt6uxfzgjcm",
+    "upload": {
+      "url": "http://127.0.0.1:8000/upload_network",
+      "params": {
+        "blocks": 20,
+        "filters": 2,
+        "field_width": 5,
+        "field_height": 5
+      }
+    },
+    "examples": {
+      "list_url": "http://127.0.0.1:8000/list_examples/4/100",
+      "download_url": "http://127.0.0.1:8000/download_examples"
+    },
+    "network": {
+      "url": "http://127.0.0.1:8000/download_network",
+      "sha": "asdasdfgoibmio4983499esrtmw3asd"
     }
   }
 }
